<resources>
    <string name="app_name">YouSave</string>

    <string name="logo_white">White logo</string>
    <string name="settings_button">Button to open settings</string>
    <string name="placeholder_for_money">123 456 zł</string>
    <string name="earned_msg">Income</string>
    <string name="spent_msg">Expense</string>
    <string name="balance_msg">Balance</string>

    <string name="no_transactions_message">No transactions yet</string>

    <string name="price_column">Price</string>
    <string name="date_colum">Date</string>
    <string name="title_column">Title &amp; Description</string>

    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
</resources>